# Nmap Changelog ($Id$); -*-text-*-

o [NSE] Ported the pop3-brute script to use the brute library.
  [Piotr Olma]

o Fixed a compilation problem on Solaris 9 caused by a missing
  definition of IPV6_V6ONLY. Reported by Dagobert Michelsen.

o Upgraded included libpcap to version 1.2.1.

o [NSE] Added hostmap-robtex.nse by Arturo Busleiman, which finds other
  domain names sharing the IP address of the target.

o [NSE] Renamed hostmap.nse to hostmap-bfk.nse.

o [NSE] Added http-robtex-shared-ns by Arturo Busleiman, finding
  domain names that share the same name server as the target.

o [NSE] Added the script http-vlcstreamer-ls which queries the VLC Streamer
  helper service for a list of files in a given directory. [Patrik Karlsson]

o [NSE] Added the script targets-ipv6-mld that sends a malformed ICMP6 MLD
  Query to discover IPv6 enabled hosts on the LAN. [Niteesh Kumar]

o [NSE] Added script http-virustotal that allows checking files, or hashes
  of previously scanned files, against the major antivirus engines. [Patrik
  Karlsson]

o Setting --min-parallelism by itself no longer forces the maximum
  parallelism to the same value. [Chris Woodbury, David Fifield]

o [NSE] Added an error message indicating script failure, when Nmap is being
  run in non verbose/debug mode. [Patrik Karlsson]

o Service-scan information is now included in XML and grepable output
  even if -sV wasn't used. This information can be set by scripts in the
  absence of -sV. [Daniel Miller]

o [NSE] Added the script dns-ip6-arpa-scan which uses a very efficient
  technique to scan the ip6.arpa zone for PTR records. [Patrik Karlsson]

o Changed XML output to show the "service" element whenever a tunnel
  is discovered for a port, even if the service behind it was unknown.
  [Matt Foster]

o [Zenmap] Fixed a crash that would happen in the profile editor when
  the script.db file doesn't exist. The bug was reported by Daniel
  Miller.
